testsuite/poke.pkl/and-diag-2.pk
/* { dg-do compile } */

var a = Exception {} /* { dg-error "invalid operand.*\n.*expected integral.*" } */
        && "foo"; 
